// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collaboration move teamD under teamB 1`] = `
Object {
  "can user1 read content on project1": true,
  "can user1 read content on project2": true,
  "can user1 read content on project3": true,
  "can user1 read content on whattf": null,
  "can user2 read content on project1": true,
  "can user2 read content on project2": false,
  "can user2 read content on project3": true,
  "can user3 read content on project1": false,
  "can user3 read content on project2": false,
  "can user3 read content on project3": false,
  "can user4 read content on project1": true,
  "can user4 read content on project2": false,
  "can user4 read content on project3": false,
  "can user5 read content on project1": false,
  "can user5 read content on project2": false,
  "can user5 read content on project3": false,
  "can user6 read content on project1": false,
  "can user6 read content on project2": false,
  "can user6 read content on project3": false,
  "can user7 read content on project1": true,
  "can user7 read content on project2": false,
  "can user7 read content on project3": true,
  "can user8 read content on project1": true,
  "can user8 read content on project2": false,
  "can user8 read content on project3": false,
  "can user9 read content on project1": false,
  "can user9 read content on project2": false,
  "can user9 read content on project3": false,
  "can whoever read content on project2": null,
}
`;

exports[`collaboration move teamF under teamE 1`] = `
Object {
  "can user1 read content on project1": true,
  "can user1 read content on project2": true,
  "can user1 read content on project3": true,
  "can user1 read content on whattf": null,
  "can user2 read content on project1": true,
  "can user2 read content on project2": false,
  "can user2 read content on project3": true,
  "can user3 read content on project1": true,
  "can user3 read content on project2": false,
  "can user3 read content on project3": true,
  "can user4 read content on project1": true,
  "can user4 read content on project2": false,
  "can user4 read content on project3": false,
  "can user5 read content on project1": true,
  "can user5 read content on project2": false,
  "can user5 read content on project3": true,
  "can user6 read content on project1": true,
  "can user6 read content on project2": false,
  "can user6 read content on project3": false,
  "can user7 read content on project1": false,
  "can user7 read content on project2": false,
  "can user7 read content on project3": true,
  "can user8 read content on project1": true,
  "can user8 read content on project2": false,
  "can user8 read content on project3": false,
  "can user9 read content on project1": false,
  "can user9 read content on project2": false,
  "can user9 read content on project3": false,
  "can whoever read content on project2": null,
}
`;

exports[`collaboration remove a user2 1`] = `
Object {
  "can user2 read content on project1": false,
  "can user2 read content on project2": false,
  "can user2 read content on project3": false,
}
`;

exports[`collaboration remove teamF collaboration to project1 1`] = `
Object {
  "can user1 read content on project1": true,
  "can user2 read content on project1": false,
  "can user3 read content on project1": false,
  "can user4 read content on project1": true,
  "can user5 read content on project1": false,
  "can user6 read content on project1": false,
  "can user7 read content on project1": false,
  "can user8 read content on project1": false,
  "can user9 read content on project1": false,
}
`;

exports[`collaboration remove user5 from teamC 1`] = `
Object {
  "can user1 read content on project1": true,
  "can user1 read content on project2": true,
  "can user1 read content on project3": true,
  "can user1 read content on whattf": null,
  "can user2 read content on project1": true,
  "can user2 read content on project2": false,
  "can user2 read content on project3": true,
  "can user3 read content on project1": true,
  "can user3 read content on project2": false,
  "can user3 read content on project3": true,
  "can user4 read content on project1": true,
  "can user4 read content on project2": false,
  "can user4 read content on project3": false,
  "can user5 read content on project1": false,
  "can user5 read content on project2": false,
  "can user5 read content on project3": false,
  "can user6 read content on project1": false,
  "can user6 read content on project2": false,
  "can user6 read content on project3": false,
  "can user7 read content on project1": true,
  "can user7 read content on project2": false,
  "can user7 read content on project3": true,
  "can user8 read content on project1": true,
  "can user8 read content on project2": false,
  "can user8 read content on project3": false,
  "can user9 read content on project1": false,
  "can user9 read content on project2": false,
  "can user9 read content on project3": false,
  "can whoever read content on project2": null,
}
`;

exports[`collaboration testing basic permissions 1`] = `
Object {
  "can user1 read content on project1": true,
  "can user1 read content on project2": true,
  "can user1 read content on project3": true,
  "can user1 read content on whattf": null,
  "can user2 read content on project1": true,
  "can user2 read content on project2": false,
  "can user2 read content on project3": true,
  "can user3 read content on project1": true,
  "can user3 read content on project2": false,
  "can user3 read content on project3": true,
  "can user4 read content on project1": true,
  "can user4 read content on project2": false,
  "can user4 read content on project3": false,
  "can user5 read content on project1": true,
  "can user5 read content on project2": false,
  "can user5 read content on project3": true,
  "can user6 read content on project1": false,
  "can user6 read content on project2": false,
  "can user6 read content on project3": false,
  "can user7 read content on project1": true,
  "can user7 read content on project2": false,
  "can user7 read content on project3": true,
  "can user8 read content on project1": true,
  "can user8 read content on project2": false,
  "can user8 read content on project3": false,
  "can user9 read content on project1": false,
  "can user9 read content on project2": false,
  "can user9 read content on project3": false,
  "can whoever read content on project2": null,
}
`;
